Major spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -27,10 +27,10 @@ a:visited{
 .main_nav ul{
 	border-radius: 5px;
 	border: 1px solid #cecece;
-	border-bottom: none;
 	width: 80%;
 	margin: 0 auto;
 	padding:0;
+	border-bottom: 0px;
 }
 .main_nav li{
 	list-style: none;
@@ -38,7 +38,6 @@ a:visited{
 	color: red;
 	text-align: center;
 	padding: 10px;
-	width: 92%;
 
 }
 
@@ -69,18 +68,18 @@ a:visited{
 .search{
 	background-color: #edeced;
 	padding: 10px;
-	margin: 0 auto;
+	/*margin: 0 auto;*/
 	margin-bottom: 20px;
-	width: 80%;
+	/*width: 80%;*/
 	
 }
 
 .search input{
 	margin-bottom: 10px;
-	width: 100%;
 	border-radius: 5px;
 	padding-top: 10px;
 	padding-bottom: 10px;
+	/*width: 80%;*/
 }
 
  .search button{
@@ -90,7 +89,7 @@ a:visited{
 	color: white;
 	border-radius: 5px;
 	border: none;
-
+	margin-top: 10px;
 
 }
 
@@ -117,7 +116,6 @@ a:visited{
 }
 .wrapper{
 	width: 80%;
-	background-color: #edeced;
 	text-align: center;
 	margin: 0 auto;
 	padding: 10px;
@@ -128,7 +126,7 @@ a:visited{
 	display: block;
 	text-align: center;
 }
-.wrapper input[type=text]{
+.form input[type=text]{
 	display: block;
 	margin: 0 auto;
 	border-radius: 5px;
@@ -137,13 +135,18 @@ a:visited{
 
 }
 
+
+form{
+	background-color: #edeced;
+	padding: 10px;
+}
+
 .descriptors h2{
 	text-align: center;
 }
 
 .descriptors ul{
 	background-color: #ffffff;
-	width: 60%;
 	margin: 0 auto;
 	list-style: none;
 	text-align: left;
@@ -307,9 +310,7 @@ blockquote{
 		text-align: left;
 	}
 
-	.wrapper input{
-		display: block;
-	}
+	
 
 	.column{
 	display: inline-block;
@@ -320,8 +321,24 @@ blockquote{
 	}	
 
 	.descriptors ul{
-		width: 90%;
+		
 		text-align: left;
+
+	}
+
+	.search{
+		
+	}
+
+	.search input [type=text]{
+		display: inline-block;
+		width: 60%;
+		margin: 0;
+	}
+
+	.search button{
+		display: inline-block;
+		width: 30%;
 
 	}
 
@@ -345,6 +362,7 @@ blockquote{
 		display: block;
 	}
 
+
 	.secondary_nav ul{
 		border: none;
 	}
@@ -356,7 +374,7 @@ blockquote{
 	.column2{
 	display: inline-block;
     width: 30%;
-    padding: 1%;
+    padding: 1.2%;
     vertical-align: top;
     text-align: center;
 	}
@@ -381,13 +399,35 @@ blockquote{
 		display: block;
 		margin: 0;
 		padding: 0;
+		width: 100%;
+		text-align: center;
+		border: 1px solid #cecece;
 	}
 
 	.main_nav li{
 		display: inline-block;
+		border: none;
+		padding-bottom: 0;
 	}
 
+	.search{
+		position: absolute;
+		top:0;
+		right:0;
+		background-color: #ffffff;
+	}
 
+	.membership{
+		border-top: 0;
+	}
+
+	.inner{
+		background-color: #edeced;
+	}
+
+	.additional button{
+		background-color: #60dbff;
+	}
 
 
 
